# mpq-tools

./: FAQ  Makefile.am  NEWS  README  TODO  configure.ac
doc/: Makefile.am
doc/man1/: Makefile.am  mpq-extract.1  mpq-info.1
src/: Makefile.am  mpq-extract.c  mpq-info.c
