# minimum required automake 1.6
AUTOMAKE_OPTIONS		= 1.6

# any directories which should be built and installed.
SUBDIRS				= src doc

# the directories which are part of the distribution.
DIST_SUBDIRS			= $(SUBDIRS)

# extra stuff.
EXTRA_DIST =			\
	AUTHORS			\
	COPYING			\
	ChangeLog		\
	FAQ			\
	INSTALL			\
	NEWS			\
	README			\
	THANKS			\
	TODO
